--- a/app/res/layout/dialog_payment_confirmation.xml
+++ b/app/res/layout/dialog_payment_confirmation.xml
@@ -20,7 +20,7 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
-        <org.commcare.views.connect.connecttextview.ConnectBoldTextView
+        <TextView
             android:id="@+id/tv_payment_confirmation_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -30,9 +30,10 @@
             app:layout_constraintBottom_toBottomOf="@+id/img_payment_status"
             app:layout_constraintStart_toEndOf="@+id/img_payment_status"
             app:layout_constraintTop_toTopOf="@+id/img_payment_status"
-            tools:text="@string/connect_payment_confirm_transferred" />
+            tools:text="@string/connect_payment_confirm_transferred"
+            android:textStyle="bold"/>
 
-        <org.commcare.views.connect.connecttextview.ConnectBoldTextView
+        <TextView
             android:id="@+id/tv_payment_amount"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -40,9 +41,10 @@
             android:textColor="@color/black"
             android:textSize="26sp"
             app:layout_constraintStart_toStartOf="@+id/tv_payment_confirmation_title"
-            app:layout_constraintTop_toBottomOf="@+id/tv_payment_confirmation_title" />
+            app:layout_constraintTop_toBottomOf="@+id/tv_payment_confirmation_title"
+            android:textStyle="bold"/>
 
-        <org.commcare.views.connect.connecttextview.ConnectRegularTextView
+        <TextView
             android:id="@+id/tv_payment_date"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
