--- a/app/res/layout-land/home_screen.xml
+++ b/app/res/layout-land/home_screen.xml
@@ -56,7 +56,7 @@
                 app:layout_constraintTop_toTopOf="parent"
                 app:tint="@color/black" />
 
-            <org.commcare.views.connect.connecttextview.ConnectRegularTextView
+            <TextView
                 android:id="@+id/connect_phone_label"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
@@ -66,7 +66,7 @@
                 app:layout_constraintStart_toEndOf="@id/connect_secondary_phone_icon"
                 app:layout_constraintTop_toTopOf="parent" />
 
-            <org.commcare.views.connect.RoundedButton
+            <com.google.android.material.button.MaterialButton
                 android:id="@+id/connect_phone_yes_button"
                 android:layout_width="wrap_content"
                 android:layout_height="35dp"
@@ -75,30 +75,18 @@
                 android:textColor="@color/blue"
                 android:textSize="18sp"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/connect_phone_label"
-                app:roundButtonBackgroundColor="@color/connect_blue_color"
-                app:roundButtonBorderRadius="@dimen/dp48"
-                app:roundButtonIconLeftAlign="false"
-                app:roundButtonTextColor="@color/white"
-                app:roundButtonTextSize="5.0sp" />
+                app:layout_constraintTop_toBottomOf="@id/connect_phone_label" />
 
-            <org.commcare.views.connect.RoundedButton
+            <com.google.android.material.button.MaterialButton
+                style="@style/NegativeButtonStyle"
                 android:id="@+id/connect_phone_no_button"
                 android:layout_width="wrap_content"
                 android:layout_height="35dp"
                 android:layout_marginTop="10dp"
                 android:layout_marginEnd="10dp"
                 android:text="@string/connect_payment_confirm_no"
-                android:textColor="@color/blue"
-                android:textSize="18sp"
                 app:layout_constraintEnd_toStartOf="@id/connect_phone_yes_button"
-                app:layout_constraintTop_toBottomOf="@id/connect_phone_label"
-                app:roundButtonBorderColor="@color/connect_blue_color"
-                app:roundButtonBorderVisible="true"
-                app:roundButtonBorderWidth="0.5dp"
-                app:roundButtonIconTintColor="@color/white"
-                app:roundButtonTextColor="@color/connect_blue_color"
-                app:roundButtonTextSize="5.0sp" />
+                app:layout_constraintTop_toBottomOf="@id/connect_phone_label" />
         </androidx.constraintlayout.widget.ConstraintLayout>
 
     </androidx.cardview.widget.CardView>
@@ -133,7 +121,7 @@
                     android:paddingTop="35dp"
                     android:paddingEnd="15dp">
 
-                    <org.commcare.views.connect.connecttextview.ConnectMediumTextView
+                    <TextView
                         android:id="@+id/tvConnectMessage"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
@@ -142,7 +130,8 @@
                         android:textColor="@color/connect_warning_color"
                         android:textSize="14sp"
                         app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toTopOf="parent" />
+                        app:layout_constraintTop_toTopOf="parent"
+                        android:textStyle="bold"/>
 
                 </androidx.constraintlayout.widget.ConstraintLayout>
             </androidx.cardview.widget.CardView>
