--- a/app/res/layout/fragment_connect_delivery_progress.xml
+++ b/app/res/layout/fragment_connect_delivery_progress.xml
@@ -70,7 +70,7 @@
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toEndOf="@id/connect_payment_confirm_icon" />
 
-                    <org.commcare.views.connect.RoundedButton
+                    <com.google.android.material.button.MaterialButton
                         android:id="@+id/connect_payment_confirm_yes_button"
                         android:layout_width="wrap_content"
                         android:layout_height="35dp"
@@ -79,13 +79,9 @@
                         android:textColor="@color/blue"
                         android:textSize="18sp"
                         app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintTop_toBottomOf="@id/connect_payment_confirm_label"
-                        app:roundButtonBackgroundColor="@color/connect_blue_color"
-                        app:roundButtonBorderRadius="@dimen/dp48"
-                        app:roundButtonTextColor="@color/white"
-                        app:roundButtonTextSize="5.0sp" />
+                        app:layout_constraintTop_toBottomOf="@id/connect_payment_confirm_label" />
 
-                    <org.commcare.views.connect.RoundedButton
+                    <com.google.android.material.button.MaterialButton
                         android:id="@+id/connect_payment_confirm_no_button"
                         android:layout_width="wrap_content"
                         android:layout_height="35dp"
@@ -93,13 +89,10 @@
                         android:text="@string/connect_payment_confirm_no"
                         android:textColor="@color/blue"
                         android:textSize="18sp"
+                        style="@style/NegativeButtonStyle"
                         app:layout_constraintEnd_toStartOf="@id/connect_payment_confirm_yes_button"
                         app:layout_constraintTop_toTopOf="@id/connect_payment_confirm_yes_button"
-                        app:roundButtonBorderColor="@color/connect_blue_color"
-                        app:roundButtonBorderVisible="true"
-                        app:roundButtonBorderWidth="0.5dp"
-                        app:roundButtonTextColor="@color/connect_blue_color"
-                        app:roundButtonTextSize="5.0sp" />
+                       />
                 </androidx.constraintlayout.widget.ConstraintLayout>
             </androidx.cardview.widget.CardView>
 
