--- a/app/res/layout/fragment_connect_results_summary_list.xml
+++ b/app/res/layout/fragment_connect_results_summary_list.xml
@@ -52,7 +52,7 @@
                             app:layout_constraintTop_toTopOf="parent"
                             app:tint="@color/connect_light_grey" />
 
-                        <org.commcare.views.connect.connecttextview.ConnectRegularTextView
+                        <TextView
                             android:id="@+id/payment_earned_label"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
@@ -64,7 +64,7 @@
                             app:layout_constraintStart_toEndOf="@+id/imageView"
                             app:layout_constraintTop_toTopOf="parent" />
 
-                        <org.commcare.views.connect.connecttextview.ConnectMediumTextView
+                        <TextView
                             android:id="@+id/payment_earned_amount"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
@@ -74,7 +74,8 @@
                             app:layout_constraintBottom_toBottomOf="parent"
                             app:layout_constraintStart_toEndOf="@+id/imageView"
                             app:layout_constraintTop_toBottomOf="@+id/payment_earned_label"
-                            tools:text="$800" />
+                            tools:text="$800"
+                            android:textStyle="bold"/>
 
                     </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -105,7 +106,7 @@
                             app:layout_constraintTop_toTopOf="parent"
                             app:tint="@color/connect_light_grey" />
 
-                        <org.commcare.views.connect.connecttextview.ConnectRegularTextView
+                        <TextView
                             android:id="@+id/payment_transferred_label"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
@@ -117,7 +118,7 @@
                             app:layout_constraintStart_toEndOf="@+id/imgTransffed"
                             app:layout_constraintTop_toTopOf="parent" />
 
-                        <org.commcare.views.connect.connecttextview.ConnectMediumTextView
+                        <TextView
                             android:id="@+id/payment_transferred_amount"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
@@ -127,7 +128,8 @@
                             app:layout_constraintBottom_toBottomOf="parent"
                             app:layout_constraintStart_toEndOf="@+id/imgTransffed"
                             app:layout_constraintTop_toBottomOf="@+id/payment_transferred_label"
-                            tools:text="$800" />
+                            tools:text="$800"
+                            android:textStyle="bold"/>
 
                     </androidx.constraintlayout.widget.ConstraintLayout>
 
