--- a/app/res/layout/item_chat_left_view.xml
+++ b/app/res/layout/item_chat_left_view.xml
@@ -31,22 +31,20 @@
             android:orientation="vertical"
             android:padding="10dp">
 
-            <org.commcare.views.connect.connecttextview.ConnectRegularTextView
+            <TextView
                 android:id="@+id/tvChatMessage"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:fontFamily="@font/roboto_regular"
                 android:text="Some dummy text message from user A"
                 android:textColor="@color/white"
                 android:textSize="14sp" />
 
-            <org.commcare.views.connect.connecttextview.ConnectRegularTextView
+            <TextView
                 android:id="@+id/tvUserName"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="end"
                 android:layout_marginTop="3dp"
-                android:fontFamily="@font/roboto_regular"
                 android:text="11:00 AM"
                 android:textColor="@color/white"
                 android:textSize="11sp" />
