--- a/app/res/layout/view_progress_job_card.xml
+++ b/app/res/layout/view_progress_job_card.xml
@@ -13,7 +13,7 @@
         android:layout_height="match_parent"
         android:padding="16dp">
 
-        <org.commcare.views.connect.connecttextview.ConnectBoldTextView
+        <TextView
             android:id="@+id/tv_job_title"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
@@ -22,9 +22,10 @@
             android:textSize="16sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            android:textStyle="bold"/>
 
-        <org.commcare.views.connect.connecttextview.ConnectMediumTextView
+        <TextView
             android:id="@+id/tv_job_description"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -33,9 +34,10 @@
             android:textColor="@color/connect_grey"
             android:textSize="12sp"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/tv_job_title" />
+            app:layout_constraintTop_toBottomOf="@+id/tv_job_title"
+            android:textStyle="bold"/>
 
-        <org.commcare.views.connect.connecttextview.ConnectMediumTextView
+        <TextView
             android:id="@+id/tv_view_more"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
@@ -45,9 +47,10 @@
             android:textColor="@color/connect_dark_blue_color"
             android:textSize="14sp"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/tv_job_description" />
+            app:layout_constraintTop_toBottomOf="@+id/tv_job_description"
+            android:textStyle="bold"/>
 
-        <org.commcare.views.connect.connecttextview.ConnectBoldTextView
+        <TextView
             android:id="@+id/tvDailyVisitTitle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -57,9 +60,10 @@
             android:visibility="visible"
             app:layout_constraintTop_toBottomOf="@+id/tv_job_description"
             app:layout_constraintEnd_toEndOf="parent"
-            tools:visibility="visible" />
+            tools:visibility="visible"
+            android:textStyle="bold"/>
 
-        <org.commcare.views.connect.connecttextview.ConnectBoldTextView
+        <TextView
             android:id="@+id/tv_job_time"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
@@ -81,7 +85,7 @@
             tools:itemCount="3"
             tools:listitem="@layout/item_progress_job_summary_visit" />
 
-        <org.commcare.views.connect.connecttextview.ConnectRegularTextView
+        <TextView
             android:id="@+id/connect_job_end_date"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
